# RouteFinder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  main.py  model.py  storage.py
app/api/: areas.py  embed.py  feedback.py  review.py  search.py  submit.py  suggest.py
app/migrations/: 001_images_embeddings.sql  002_area_route_suggestions.sql  003_route_image_embeddings.sql  004_route_image_filter_scores.sql
clip_filter/: __init__.py  dataset.py  eval.py  loss.py  model.py  test_clip_filter.py  train.py  visualize.py
data/tagged_trees/: processed_mountain_project_tree.csv  tagged_mount_nemo_tree.json  tagged_ontario_south_bouldering_and_rock_tree.json
data/trees/: mount_nemo_tree.json
data/uploaded_image_indices/: processed_urls.json
docs/: architecture.md
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/: config.ts
routefinder/data/: download.py  extract.py  scrape.py
routefinder/db/: insert.py
routefinder/models/: architectures.py
scripts/: annotate.py  apply_clip_filter.py  bootstrap_embeddings.py  build_hf_dataset.py  curate.py  diagnose_search.py  download_b2_images.py  embed.py  export_dataset.py  export_mp_dataset.py  export_mp_images.py  mine.py  scrape.py  test_hf_ds.py  upload_curated.py
src/data_curation/: hf_dataset_creator.py  hf_ds_from_csv.py  multiview_data_mining.py
src/labeling/: st_image_annotator.py  st_image_annotator_v2.py
src/scrape/: mountain_project_spyder.py  (+3 more)
train/: __init__.py  datasets.py  eval.py  inference.py  samplers.py  train.py
(+19 files in other folders)
