[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routefinder"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "timm",
    "pytorch-lightning",
    "pytorch-metric-learning",
    "lightly",
    "Pillow",
    "aiohttp",
    "requests",
    "beautifulsoup4",
    "lxml",
    "datasets",
    "pandas",
    "tqdm",
    "psycopg2-binary",
    "open-clip-torch",
    "python-dotenv",
]

[project.optional-dependencies]
app = ["fastapi", "uvicorn[standard]", "python-multipart", "pgvector", "boto3", "pydantic-settings"]
dev = ["streamlit", "matplotlib", "seaborn", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["routefinder*", "clip_filter*", "train*"]
